fix:Changing_excel_project_text

--- a/excel_dashboard.html
+++ b/excel_dashboard.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About me</title>
+		<title>excel_dashboard</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -34,25 +34,28 @@
 
 						<!-- Featured Post -->
 							<article class="post featured">
-								<header class="major">
+								<body class="major">
 									<h2><a href="#">Dashboard of Video Games sales using Excel and Python<br /></a></h2>
 									<p>In this project I created a dashboard for Video Games sales based on kaggle data set <a href="https://www.kaggle.com/datasets/gregorut/videogamesales"> link</a>. <br />
-									Since data in the project was not fully compleat I used Python to screap www.rawg.io website<br /></p>
-								</header>
-								<a href="#" class="image main"><img src="images/dash.jpg" alt="" /></a>
-								<header class="major">
-								<p>This interactive dashboard allows user to choose time period, platform and genre to analysie sales. <br /></p>
-								</header>
-								<a href="#" class="image main"><img src="images/dash_1.jpg" alt="" /></a>
-								<a href="#" class="image main"><img src="images/dash_2.jpg" alt="" /></a>
-								<header class="major">
-									<p>User also can cross refrence diffrent slicers to get the resault he needs<br /></p>
-								</header>
-								<a href="#" class="image main"><img src="images/dash_3.jpg" alt="" /></a>
-								<header class="major">
+										Since data in the project was not fully compleat I used Python to screap www.rawg.io website.  <br />
+										All files for this project can be found here <a href="https://github.com/MichalZinko/Video_games_sales_cleaning"> link</a>. </p><br /></p>
+									<a href="#" class="image fit"><img src="images/dash.jpg" alt="" /></a>
+									<p>This interactive dashboard allows user to choose time period, platform and genre to analysie sales. <br /></p>
+									<a href="#" class="image fit"><img src="images/dash_1.jpg" alt="" /></a>
+									<a href="#" class="image main"><img src="images/dash_2.jpg" alt="" /></a>
+									<p>User also can cross refrence diffrent slicers to get the resault needed.<br /></p>
+									<a href="#" class="image main"><img src="images/dash_3.jpg" alt="" /></a>
+									<p>Frist step was cleaninig the data. (The image shows small part of data set).<br /></p>
+									<a href="#" class="image main"><img src="images/table_1.jpg" alt="" /></a>
+									<p>I decided to remove rank column, and change the certain abbreviation for clarity. Additioanly I seprated date into two columns. One had a date format for 
+										time slicer and other was created for chart clarity. I used DATE() function to convert year, that were in number format, into a date format.<br /></p>
+									<a href="#" class="image main"><img src="images/table_2.jpg" alt="" /></a>
+									<p>After cleaning the data I created 3 pivot tables. First one sumed data of each year and divided into separated columns based on the country. Second one sumed data based on genre. Last one showed 5 best sold games.<br />
+										</p>
+									<a href="#" class="image main"><img src="images/table_4.jpg" alt="" /></a>
 									<p>Despite rebust nature of the data set there were certaing relese dates missing.<br />
-									I decided to use my python skills to find the missing data. Full code can be found here <a href="https://github.com/MichalZinko/Video_games_sales_cleaning"> link</a>. </p>
-								</header>
+										I decided to use my python skills to find the missing data. Full code can be found here <a href="https://github.com/MichalZinko/Video_games_sales_cleaning"> link</a>. </p>
+								</body>
 							</article>
 
 					</div>
